--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,42 @@
 services:
+
+  zookeeper:
+    image: docker.io/bitnami/zookeeper:latest
+    ports:
+      - "2181:2181"
+    volumes:
+      - "zookeeper_data:/bitnami"
+    environment:
+      - ZOO_ENABLE_AUTH=yes
+      - ZOO_SERVER_USERS=kafka
+      - ZOO_SERVER_PASSWORDS=kafka_password
+
+  kafka:
+    image: docker.io/bitnami/kafka:latest
+    ports:
+      - "9092:9092"
+    volumes:
+      - "kafka_data:/bitnami"
+    environment:
+      - KAFKA_ZOOKEEPER_USER=kafka
+      - KAFKA_ZOOKEEPER_PASSWORD=kafka_password
+      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:latest
+      - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
+      - ALLOW_PLAINTEXT_LISTENER=yes
+    depends_on:
+      - zookeeper
+
+  user:
+    build:
+      context: ./mail
+      dockerfile: Dockerfile
+    depends_on:
+      - kafka
+    networks:
+      - default
+    ports:
+      - "8082:8082"
+
   postgres:
     image: postgres:latest
     environment:
@@ -32,4 +70,6 @@ services:
       - "8080:8080"
 
 volumes:
+  zookeeper_data:
+  kafka_data:
   postgres-db:
