--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,9 +33,26 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - postgres
-      - rabbitmq
+      - mail
     ports:
       - "8081:8081"
+
+  redis:
+    image: bitnami/redis:latest
+    environment:
+      - REDIS_PASSWORD=password
+    ports:
+      - "6379:6379"
+
+  mfa:
+    build:
+      context: ./mfa
+      dockerfile: Dockerfile
+    depends_on:
+      - redis
+      - mail
+    ports:
+      - "8083:8083"
 
   gateway:
     build:
@@ -43,6 +60,7 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - user
+      - mfa
     ports:
       - "8080:8080"
 
