--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,6 +74,15 @@ services:
     volumes:
       - mongo-db:/data/db
 
+  azurite:
+    image: mcr.microsoft.com/azure-storage/azurite
+    ports:
+      - "10000:10000"
+      - "10001:10001"
+      - "10002:10002"
+    volumes:
+      - azurite-db:/data
+
   file:
     build:
       context: ./file
@@ -88,3 +97,4 @@ volumes:
   rabbitmq_log:
   postgres-db:
   mongo-db:
+  azurite-db:
