--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,6 +64,27 @@ services:
     ports:
       - "8080:8080"
 
+  prometheus:
+    image: prom/prometheus
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+    ports:
+      - 9090:9090
+    volumes:
+      - ./prometheus:/etc/prometheus
+      - prom_data:/prometheus
+
+  grafana:
+    image: grafana/grafana
+    ports:
+      - 3000:3000
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=password
+      - GF_AUTH_BASIC_ENABLED=false
+    volumes:
+      - ./grafana:/etc/grafana/provisioning/
+
   mongo:
     image: mongo
     environment:
@@ -97,5 +118,6 @@ volumes:
   rabbitmq_data:
   rabbitmq_log:
   postgres-db:
+  prom_data:
   mongo-db:
   azurite-db:
